fixed mobile responsiveness alignment bugs
added missing bracket; fixed button margins

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -688,9 +688,10 @@ h5{
 		vertical-align: middle;
 		width: 100%;
 	}
+}
 @media ( max-width: 767px ) {
 #main-cta-wrapper{
-	margin-bottom: 10px;
+	
 }
 	.subscription-form-input > * {
 		text-align: center;
@@ -743,7 +744,6 @@ h5{
 	font-size: 15px;
 	line-height: 30px;
 	padding: 14px 20px;
-	margin-top: 10px;
 }
 /* BUTTON COLOR */
 .btn-default {
